--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,23 @@
                 <version>0.4.8</version>
             </dependency>
 
+
+<!--            <dependency>-->
+<!--                <groupId>javax.xml.bind</groupId>-->
+<!--                <artifactId>jaxb-api</artifactId>-->
+<!--                <version>2.3.1</version>-->
+<!--            </dependency>-->
+<!--            <dependency>-->
+<!--                <groupId>javax.activation</groupId>-->
+<!--                <artifactId>activation</artifactId>-->
+<!--                <version>1.1.1</version>-->
+<!--            </dependency>-->
+<!--            &lt;!&ndash; no more than 2.3.3&ndash;&gt;-->
+<!--            <dependency>-->
+<!--                <groupId>org.glassfish.jaxb</groupId>-->
+<!--                <artifactId>jaxb-runtime</artifactId>-->
+<!--                <version>2.3.3</version>-->
+<!--            </dependency>-->
         </dependencies>
     </dependencyManagement>
 </project>
