店铺营业状态设置业务代码开发

--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -11,3 +11,8 @@ sky:
     bucket-name: sky-xiaoheyu
     access-key-id: LTAI5tQzeM2aUuW5SqwYfX1W
     access-key-secret: v56YtxACUUVFXKMlpQhl9xfDgzdzls
+  redis:
+    host: localhost
+    port: 6379
+    password: 123456
+    database: 10
