--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -24,5 +24,7 @@ sky:
     privateKeyFilePath: D:\apiclient_key.pem
     apiV3Key: CZBK51236435wxpay435434323FFDuv3
     weChatPayCertFilePath: D:\wechatpay_166D96F876F45C7D07CE98952A96EC980368ACFC.pem
-    notifyUrl: https://www.weixin.qq.com/wxpay/pay.php
-    refundNotifyUrl: https://www.weixin.qq.com/wxpay/pay.php
+#    notifyUrl: https://www.weixin.qq.com/wxpay/pay.php
+#    refundNotifyUrl: https://www.weixin.qq.com/wxpay/pay.php
+    notify-url:  https://83d27d0.r12.cpolar.top/notify/paySuccess
+    refundNotifyUrl: https://83d27d0.r12.cpolar.top/notify/refundSuccess
