--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -26,7 +26,8 @@ sky:
     weChatPayCertFilePath: D:\wechatpay_166D96F876F45C7D07CE98952A96EC980368ACFC.pem
 #    notifyUrl: https://www.weixin.qq.com/wxpay/pay.php
 #    refundNotifyUrl: https://www.weixin.qq.com/wxpay/pay.php
+#
+    notify-url:  http://316520e5r18.cpolar.top/notify/paySuccess
+    refundNotifyUrl: http://316520e5r18.cpolar.top/notify/refundSuccess
 
-    notify-url:  http://1f975818.r15.cpolar.top/notify/paySuccess
-    refundNotifyUrl: http://1f975818.r15.cpolar.top/notify/refundSuccess
 
